# autojack

./: LICENSE  README.md
turtlebot3_auto/turtlebot3_auto/: CHANGELOG.rst  package.xml
turtlebot3_auto/turtlebot3_auto_camera/: CMakeLists.txt  package.xml  setup.py
turtlebot3_auto/turtlebot3_auto_camera/cfg/: ImageCompensationParams.cfg  ImageProjectionParams.cfg  camera.yaml
turtlebot3_auto/turtlebot3_auto_camera/data/: calibration_checkerboard.txt
turtlebot3_auto/turtlebot3_auto_camera/launch/: turtlebot3_auto_camera_calibration.launch  turtlebot3_auto_camera_pi.launch  turtlebot3_auto_extrinsic_camera_calibration.launch  turtlebot3_auto_intrinsic_camera_calibration.launch
turtlebot3_auto/turtlebot3_auto_camera/src/: color_redefinition.py  image_balance.py  image_compensation.py  image_projection.py  image_to_ground.cpp  image_to_ground.py  path_making.py  raspicam_node2.py
turtlebot3_auto/turtlebot3_auto_control/: CMakeLists.txt  package.xml  setup.py
turtlebot3_auto/turtlebot3_auto_control/launch/: turtlebot3_auto_control_lane.launch  turtlebot3_auto_control_parking.launch  turtlebot3_auto_control_tunnel.launch
turtlebot3_auto/turtlebot3_auto_control/src/: control_lane.py  control_parking.py  path_following.py
turtlebot3_auto/turtlebot3_auto_core/: CMakeLists.txt  README.md  package.xml  setup.py
turtlebot3_auto/turtlebot3_auto_core/cfg/: CoreParams.cfg
turtlebot3_auto/turtlebot3_auto_core/launch/: turtlebot3_auto_core.launch
turtlebot3_auto/turtlebot3_auto_core/msg/: TrafficSign.msg
turtlebot3_auto/turtlebot3_auto_core/src/: core_mode_decider.py  core_node_controller.py
turtlebot3_auto/turtlebot3_auto_detect/: CMakeLists.txt  package.xml  setup.py
turtlebot3_auto/turtlebot3_auto_detect/cfg/: DetectLaneParams.cfg  DetectLevelParams.cfg  DetectTrafficLightParams.cfg
turtlebot3_auto/turtlebot3_auto_detect/launch/: turtlebot3_auto_detect_lane.launch  turtlebot3_auto_detect_level.launch  turtlebot3_auto_detect_parking.launch  turtlebot3_auto_detect_sign.launch  turtlebot3_auto_detect_traffic_light.launch  turtlebot3_auto_detect_tunnel.launch
turtlebot3_auto/turtlebot3_auto_detect/param/lane/: lane.yaml
turtlebot3_auto/turtlebot3_auto_detect/src/: car_barrier_detection.py  detect_lane.py  detect_level.py  detect_obstacle.py  detect_parking.py  detect_sign.py  detect_traffic_light.py  detect_tunnel.py
turtlebot3_auto/turtlebot3_auto_detect/src/signal_sign_detection/: signal_sign_detection.py
turtlebot3_auto/turtlebot3_auto_msgs/: CMakeLists.txt  package.xml
turtlebot3_auto/turtlebot3_auto_raspicam/: CMakeLists.txt  package.xml  setup.py
turtlebot3_auto/turtlebot3_auto_raspicam/src/: raspicam_node.py
turtlebot3_auto/turtlebot3_auto_settings/: CMakeLists.txt  package.xml
turtlebot3_auto/turtlebot3_auto_settings/calibrations/camera_intrinsic/: default.yaml
turtlebot3_auto/turtlebot3_auto_settings/launch/: decoder_node.launch  turtlebot3_auto_intrinsic_calibration.launch
turtlebot3_auto/turtlebot3_auto_settings/src/: decoder_node.py
turtlebot3_autorace/turtlebot3_autorace_core/src/: core_node_controller.py
turtlebot3_autorace/turtlebot3_autorace_msgs/: CMakeLists.txt  package.xml
