<?xml version="1.0"?>
<package>
  <name>turtlebot3_auto_camera</name>
  <version>0.0.1</version>
  <description> the package that controls camera on turtlebot3 auto</description>

  <maintainer email="rwjung@robotis.com">Leon Jung</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export></export>
</package>

