<?xml version="1.0"?>
<package>
  <name>turtlebot3_auto_camera</name>
  <version>1.0.0</version>
  <description>
    TurtleBot3 Auto ROS package that controls Raspberry Pi Camera, and process the image
  </description>
  <license>Apache License 2.0</license>
  <author email="rwjung@robotis.com">Leon RyuWoon Jung</author>
  <maintainer email="rwjung@robotis.com">Leon RyuWoon Jung</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <export></export>
</package>

