<?xml version="1.0"?>
<package>
  <name>turtlebot3_auto_msgs</name>
  <version>1.0.0</version>
  <description> Message package used for turtlebot3 auto</description>
  <license>Apache License 2.0</license>
  <author email="rwjung@robotis.com">Leon RyuWoon Jung</author>
  <maintainer email="rwjung@robotis.com">Leon RyuWoon Jung</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_autorace/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_autorace</url>
  <url type="website">http://emanual.robotis.com/docs/en/platform/turtlebot3/autonomous_driving/#autonomous-driving</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <export></export>
</package>

